--- a/client/src/nk.css
+++ b/client/src/nk.css
@@ -1,13 +1,13 @@
-.nk_button,
-.nk_select {
-  margin-bottom: 5px;
-}
-
-.nk_button {
+.nk {
   display: block;
   width: 100%;
   padding: 10px;
+  margin-bottom: 5px;
 
+  outline: none;
+}
+
+.nk_button {
   color: #111111;
   background-color: #cccccc;
   box-shadow: 0 1px #a0a0a0;
@@ -19,9 +19,41 @@
 }
 
 .nk_select {
-  display: block;
-  width: 100%;
-  padding: 10px;
   font-size: 1.25em;
   border-radius: 5px;
+}
+
+.nk_input {
+  border: none;
+  border-bottom: 2px solid #cccccc;
+}
+
+.nk_radioGroup:nth-of-type(n + 2) {
+  display: inline-block;
+  padding-left: 10px;
+}
+
+.nk_label {
+  font-size: 1.25em;
+  padding-left: 5px;
+  user-select: none;
+}
+
+.nk_equipCard {
+  background-color: #e8e8e8;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+.nk_equipCard:last-of-type {
+  margin-bottom: 0;
+}
+
+.nk_equipCard_title {
+  font-size: 1.25em;
+}
+.nk_equipCard_code {
+  padding-left: 5px;
+  color: #555555;
+  font-size: 0.8em;
 }
