--- a/client/src/nk.scss
+++ b/client/src/nk.scss
@@ -1,82 +1,115 @@
 .nk {
-  display: block;
+  display: inline-block;
   width: 100%;
+  margin-bottom: 10px;
   padding: 10px;
-  margin-bottom: 5px;
 
-  outline: none;
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   &_button {
-    color: #111111;
-    background-color: #cccccc;
-    box-shadow: 0 1px #a0a0a0;
-
-    border: none;
+    padding: 10px;
     text-align: center;
     text-decoration: none;
+
+    outline: none;
+
+    color: #222222;
+    background-color: #d6d6d6;
+    border: none;
+    border-top: 1px solid #999999;
+    border-bottom: 2px solid #777777;
     border-radius: 5px;
+    transition: linear 20ms;
+
+    &:active {
+      background-color: #cccccc;
+    }
+
+    &-inline {
+      display: inline-block;
+      margin-right: 10px;
+
+      &:last-of-type {
+        margin-right: 0;
+      }
+    }
+
+    &-success {
+      color: #ffffff;
+      background-color: #0088ff;
+
+      &:active {
+        background-color: #0066c0;
+      }
+    }
+
+    &-danger {
+      color: #ffffff;
+      background-color: #e65151;
+
+      &:active {
+        background-color: #a33838;
+      }
+    }
   }
 
   &_select {
     font-size: 1.25em;
-    border-radius: 5px;
   }
 
   &_input {
+    outline: none;
     border: none;
-    border-bottom: 2px solid #cccccc;
-  }
+    border-bottom: 2px solid #999999;
 
-  &_radioGroup:nth-of-type(n + 2) {
-    display: inline-block;
-    padding-left: 10px;
+    transition: linear 100ms;
+
+    &:focus {
+      border-bottom: 2px solid #ff8800;
+    }
   }
 
   &_label {
     font-size: 1.25em;
-    padding-left: 5px;
-    user-select: none;
   }
 
-  &_equipCard {
-    background-color: #e8e8e8;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 5px;
+  &_radioGroup {
+    margin-left: 10px;
 
-    &:last-of-type {
-      margin-bottom: 0;
+    & input[type="radio"] {
+      margin-right: 5px;
     }
 
+    &:first-of-type {
+      margin-left: 0;
+    }
+  }
+
+  &_cardContainer {
+  }
+
+  &_card {
+    margin-bottom: 5px;
+    padding: 10px;
+    border-radius: 5px;
+
+    background-color: #afafaf;
+    border-top: 1px solid #999999;
+    border-bottom: 2px solid #777777;
+
     &_title {
-      font-size: 1.25em;
+      font-size: 1.5em;
     }
 
     &_code {
       padding-left: 5px;
-      color: #555555;
-      font-size: 0.8em;
+      color: #333333;
     }
 
     &_control {
       text-align: right;
-
-      &_confirm,
-      &_clear {
-        color: #ffffff;
-        font-size: 1.25em;
-        padding: 5px;
-        outline: none;
-        border: none;
-        border-radius: 5px;
-      }
-      &_confirm {
-        background-color: #00b600;
-      }
-      &_clear {
-        margin-left: 10px;
-        background-color: #b60000;
-      }
     }
   }
 }
