--- a/client/src/nk.scss
+++ b/client/src/nk.scss
@@ -95,7 +95,7 @@
     padding: 10px;
     border-radius: 5px;
 
-    background-color: #afafaf;
+    background-color: #dadada;
     border-top: 1px solid #999999;
     border-bottom: 2px solid #777777;
 
