--- a/client/src/nk.scss
+++ b/client/src/nk.scss
@@ -56,11 +56,8 @@
     }
   }
 
+  &_input,
   &_select {
-    font-size: 1.25em;
-  }
-
-  &_input {
     outline: none;
     border: none;
     border-bottom: 2px solid #999999;
@@ -70,6 +67,10 @@
     &:focus {
       border-bottom: 2px solid #ff8800;
     }
+  }
+
+  &_select {
+    font-size: 1.25em;
   }
 
   &_label {
