--- a/client/src/nk.scss
+++ b/client/src/nk.scss
@@ -9,6 +9,9 @@ h2 {
     margin-bottom: 0;
   }
 }
+small {
+  font-size: 0.5em;
+}
 
 .nk {
   display: inline-block;
@@ -18,6 +21,19 @@ h2 {
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  &_label {
+    background-color: #888888;
+    color: #333333;
+    padding: 5px;
+    margin-right: 0.25em;
+    border-radius: 5px;
+
+    &-ready {
+      background-color: #0088ff;
+      color: #ffffff;
+    }
   }
 
   &_button {
@@ -54,13 +70,22 @@ h2 {
       background-color: #0088ff;
 
       &:active {
-        background-color: #0066c0;
+        background-color: #005599;
+      }
+    }
+
+    &-warning {
+      color: #ffffff;
+      background-color: #ff8800;
+
+      &:active {
+        background-color: #9e5400;
       }
     }
 
     &-info {
       color: #ffffff;
-      background-color: #00aa88;
+      background-color: #ff8800;
 
       &:active {
         background-color: #009888;
