--- a/client/src/nk.scss
+++ b/client/src/nk.scss
@@ -150,6 +150,9 @@ small {
       font-size: 1.5em;
     }
 
+    &_content {
+      padding-top: 10px;
+    }
     &_code {
       padding-left: 5px;
       color: #333333;
