--- a/client/src/nk.scss
+++ b/client/src/nk.scss
@@ -135,8 +135,8 @@ small {
     }
   }
 
-  &_cardContainer {
-  }
+  // &_cardContainer {
+  // }
 
   &_card {
     margin-bottom: 5px;
@@ -153,6 +153,7 @@ small {
     &_content {
       padding-top: 10px;
     }
+
     &_code {
       padding-left: 5px;
       color: #333333;
